# aoc23

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
source/: CMakeLists.txt  day01.cpp  day01_input.h  day02_input.h  day02_s1.cpp  day02_s2.cpp  day03_input.h  day03_s1.cpp  day03_s2.cpp
